--- a/wp-content/themes/miradas/prepros.config
+++ b/wp-content/themes/miradas/prepros.config
@@ -934,14 +934,14 @@
       {
         "file": "js/theme.js",
         "config": {
-          "autoCompile": true,
-          "sourceMap": true,
           "tasks": {
             "bundle-js": {
               "enable": true
             }
           },
-          "customOutput": "js\\theme.min.js"
+          "autoCompile": true,
+          "sourceMap": true,
+          "customOutput": "js/theme.min.js"
         }
       },
       {
