--- a/wp-content/themes/miradas/prepros.config
+++ b/wp-content/themes/miradas/prepros.config
@@ -932,16 +932,22 @@
     },
     "files": [
       {
+        "file": "js/lib/global.js",
+        "config": {
+          "customOutput": "js\\lib\\global.js"
+        }
+      },
+      {
         "file": "js/theme.js",
         "config": {
+          "autoCompile": true,
           "tasks": {
             "bundle-js": {
               "enable": true
             }
           },
-          "autoCompile": true,
           "sourceMap": true,
-          "customOutput": "js/theme.min.js"
+          "customOutput": "js\\theme.min.js"
         }
       },
       {
