--- a/wp-content/themes/miradas/prepros.config
+++ b/wp-content/themes/miradas/prepros.config
@@ -933,6 +933,15 @@
     },
     "files": [
       {
+        "file": "js/lib/global.js",
+        "config": {
+          "autoCompile": true,
+          "compileImported": true,
+          "sourceMap": true,
+          "customOutput": "js\\theme.min.js"
+        }
+      },
+      {
         "file": "js/theme.js",
         "config": {
           "tasks": {
